--- a/src/lib/styles/globals.scss
+++ b/src/lib/styles/globals.scss
@@ -253,6 +253,23 @@ textarea {
   height: 400px !important;
 }
 
+// Auto-resize textareas (for AIQuestionCard)
+textarea.auto-resize {
+  height: auto !important;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .questions-set {
   display: flex;
   flex-direction: column;
